# pgpad

pgpad-core/src/database/: services.rs  stmt_manager.rs  types.rs
pgpad-web/: Cargo.toml
pgpad-web/src/: lib.rs  main.rs
pgpad-web/tests/: commands.rs
src/: vite-env.d.ts
src-tauri/: Cargo.toml
src-tauri/migrations/: 004.sql
src-tauri/src/: credentials.rs  database.rs  lib.rs  storage.rs
src-tauri/src/database/: clickhouse.rs  commands.rs  parser.rs  stmt_manager.rs  types.rs
src-tauri/src/database/clickhouse/: connect.rs  execute.rs  parser.rs  schema.rs
src-tauri/src/database/postgres/: execute.rs
src-tauri/src/database/sqlite/: execute.rs
src/lib/: backend.ts  codemirror.ts  commands.svelte.ts  queryExecutor.svelte.ts  queryExecutor.test.ts  runtime.ts
src/lib/components/: ConnectionForm.svelte  Connections.svelte  KeyboardShortcuts.svelte  QueryResultsView.svelte  SqlEditor.svelte  TitleBar.svelte
